fix double scroll issue for modals on small screen

--- a/apps/sponsor/src/formSteps/Job/Job.module.scss
+++ b/apps/sponsor/src/formSteps/Job/Job.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 768px;
+  height: 100%;
 }
 
 .infoContainer {
